2020-05-05  Darshit Shah  <darnir@gnu.org>

  * m4/libtextstyle-hyperlink.m4: Use an action-if-true to prevent adding it to LIBS
  AC_SEARCH_LIBS will add the library to LIBS if action-if-true is empty.
  We prevent that by adding an action-if-true, and manually including
  LTLIBTEXTSTYLE in the libraries for Poke. This allows libpoke.so to be
  build without linking against libtextstle.

2020-05-04  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.c (complete_struct): Fix completion of normal
	fields, and add support for completing method names as well.
	* libpoke/pkl-ast.c (pkl_struct_type_traverse): Revert changes
	from commit 9e0206681.
	* testsuite/poke.repl/repl.exp (tab-completion-struct-field-1):
	New test.
	(tab-completion-struct-field-2): Likewise.
	(tab-completion-struct-field-3): Likewise.

2020-05-04  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-anal.h (struct pkl_anal_payload): New fields context
	and next_context.
	(pkl_anal_init_payload): Define.
	(PKL_ANAL_NO_CONTEXT): Likewise.
	(PKL_ANAL_CONTEXT_STRUCT_TYPE): Likewise.
	(PKL_ANAL_CONTEXT_METHOD): Likewise.
	* libpoke/pkl.c (rest_of_compilation): Use pkl_anal_init_payload.
	* libpoke/pkl-lex.l: Process METHOD.
	* lib/pkl-tab.y (declaration): Use defun_or_method and annotate
	function nodes as methods accordingly.
	(defun_or_method): New rule.
	(IS_DEFUN): Define.
	(IS_METHOD): Likewise.
	* libpoke/pkl-ast.h (PKL_AST_DECL_IN_STRUCT_P): Define.
	(struct pkl_ast_decl): New field in_struct_p.
	* libpoke/pkl-trans.c (pkl_trans1_pr_decl): Do not annotate
	functions as methods.
	Annotate declarations in struct types.
	* libpoke/std.pk (POSIX_Time64): Turn defun into method.
	(POSIX_Time32): Likewise.
	* pickles/id3v1.pk: Likewise.
	* pickles/bpf.pk: Likewise.
	* pickles/btf.pk: Likewise.
	* pickles/ctf.pk: Likewise.
	* pickles/elf.pk: Likewise.
	* pickles/leb128.pk: Likewise.
	* libpoke/pkl-anal.c (pkl_anal1_pr_decl): New handler.
	(pkl_phase_anal1): Register handler.