@@ -1,5 +1,9 @@
 2020-05-05  Darshit Shah  <darnir@gnu.org>
 
+  * poke/Makefile.am: Merge two ifdef blocks into one. (Purely cosmetic)
+
+2020-05-05  Darshit Shah  <darnir@gnu.org>
+
   * m4/libtextstyle-hyperlink.m4: Use an action-if-true to prevent adding it to LIBS
   AC_SEARCH_LIBS will add the library to LIBS if action-if-true is empty.
   We prevent that by adding an action-if-true, and manually including
